# rpi_code

./: CMakeLists.txt  README.md  amp.cpp  amp.h  amp_new.cpp  amp_new.h  amp_stop.cpp  i2c.cpp  i2c.h  main.cpp  main_stop.cpp
Modules/: Findpigpio.cmake
current_control/: .gitignore  CMakeLists.txt  current_control.cpp  current_control.h
i2c/: .gitignore  CMakeLists.txt  i2c.cpp  i2c.h
